--- a/ui/src/app/product-add/product-add.component.html
+++ b/ui/src/app/product-add/product-add.component.html
@@ -17,18 +17,18 @@
 				  </div>
 		    	<div class="form-group">
 				    <label for="short-description">Short description</label>
-				    <input type="text" class="form-control" id="short-description">
+				    <input type="text" class="form-control" id="short-description" formControlName="shortDescription">
 				  </div>
 		    	<div class="form-group">
 				    <label for="short-description">Product price</label>
 					  <div class="input-group">
 						  <span class="input-group-addon">INR</span>
-						  <input type="text" class="form-control" aria-label="Amount (to the nearest INR)">
+						  <input type="text" class="form-control" formControlName="productPrice">
 						</div>
 					</div>
 		    	<div class="form-group">
 				    <label for="short-description">Product thumbnail</label>
-				    <input type="file" class="form-control" id="short-description">
+				    <input type="file" class="form-control" id="short-description" formControlName="productThumbnail">
 				  </div>
 				</fieldset>
 	    	<div class="form-group text-right">
@@ -42,3 +42,14 @@
 </div>
 
 <p>form: {{ form.value | json }}</p>
+<br>
+<p>formStatus: {{ form.status }}</p>
+<br>
+<p>formStatus Name: {{ form.get('productName').status }}</p>
+<br>
+<p>formStatus Name: {{ form.get('shortDescription').status }}</p>
+<br>
+<p>formStatus Name: {{ form.get('productPrice').status }}</p>
+<br>
+<p>formError Name: {{ form.errors | json }}</p>
+<br>
